@@ -7,10 +7,11 @@ import lombok.Builder;
 import lombok.Data;
 import lombok.NoArgsConstructor;
 import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
 import java.util.Collection;
-import java.util.Collections;
+import java.util.List;
 
 @Data
 @Builder
@@ -35,12 +36,15 @@ public class User implements UserDetails{
     @Column(nullable = false)
     private String password;
 
+    @Column(nullable = false)
+    private String rol;
+
     @OneToMany(mappedBy = "user")
     private java.util.Set<Token> tokens;
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return Collections.emptyList();
+        return List.of(new SimpleGrantedAuthority(rol));
     }
 
     @Override
